--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "name": "nw-angular",
   "version": "1.2.0",
+  "node-main": "api/index.js",
   "main": "http://localhost:8964",
   "node-remote": "http://localhost:8964",
   "window": {
@@ -41,7 +42,10 @@
     "e2e": "ng e2e"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1",
+    "sqlite3": "^4.2.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
     "@angular/animations": "~9.0.6",
@@ -67,7 +71,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
-    "nw": "0.44.4-sdk",
+    "nw": "0.46.0-sdk",
     "nwjs-builder-phoenix": "^1.15.0",
     "nwjs-types": "^1.0.0",
     "protractor": "~5.4.3",
